[gd_scene load_steps=6 format=3 uid="uid://deyfc2lloii4d"]

[ext_resource type="Script" path="res://Main.gd" id="1_7p8sy"]
[ext_resource type="PackedScene" uid="uid://ch5lktd71coqj" path="res://Player.tscn" id="3_2wuq3"]
[ext_resource type="PackedScene" uid="uid://d18m1mxwgxhhh" path="res://hud.tscn" id="4_xon6l"]
[ext_resource type="PackedScene" uid="uid://c80jwyr5utn88" path="res://pause_menu.tscn" id="5_f2662"]
[ext_resource type="PackedScene" uid="uid://bywltv05qsnkp" path="res://map.tscn" id="6_u7j04"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_7p8sy")

[node name="Map" parent="." instance=ExtResource("6_u7j04")]

[node name="Player" parent="." instance=ExtResource("3_2wuq3")]
collision_mask = 57

[node name="del_items_check_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("4_xon6l")]

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource("5_f2662")]

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="timeout" from="del_items_check_Timer" to="." method="_on_del_items_check_timer_timeout"]
